Fixing sizing and spacing

--- a/client/src/pages/SectionPage.module.scss
+++ b/client/src/pages/SectionPage.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html,
 body {
     height: 100%;
@@ -7,87 +9,54 @@ body {
     height: 100%;
     width: 100%;
     overflow: hidden;
-    padding-top: 68px;
+    padding: 112px 32px 0 32px;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
 
 .sectionContainer {
     height: 100%;
+    width: 100%;
     max-width: 600px;
-    // display: flex;
-    // flex-direction: column;
 }
-
-.space {
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-
-// .navbarBrandContainer {
-//     align-items: center;
-// }
 
 .buttonContainer {
     max-width: 600px;
-    // margin-left: 25px;
-    // margin-right: 25px;
-    margin-top: 42px;
+    width: 100%;
     padding-bottom: 64px;
-    // align-self: center;
 }
 
 .sectionHeader {
-    // text-align: center;
-    margin-top: 32px;
-    font-weight: 800;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28.8px;
+    margin-bottom: 24px;
 }
 
 .quotedText {
     font-size: 20px;
-    width: 326px;
-    // text-align: center;
+    font-family: Roboto Serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28.1px;
 }
 
-.imgContainer,
 .quotedTextContainer {
+    max-width: 600px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    // align-items: center;
-}
-
-.sectionEllipse {
-    height: 200px;
-    width: 200px;
-}
-
-.sectionEllipse {
-    margin-top: 32px;
+    justify-content: center;
 }
 
 .quotedText {
-    margin-top: 32px;
+    margin-bottom: 64px;
 }
 
-.backText {
-    margin-left: 8px;
-}
-
-.backIcon {
-    margin-left: 16px;
-}
-
-.backLink {
-    color: black;
-    display: flex;
-}
-
-// .navbar {
-//     border-bottom: 1px solid #dbdbdb;
-// }
-
-.sectionPageLink, .sectionPageLinkContainer, .sectionPageButton, .sectionPageButtonDiv {
+.sectionPageLink,
+.sectionPageLinkContainer,
+.sectionPageButton,
+.sectionPageButtonDiv {
     max-width: 600px;
     width: 100%;
 }
